--- a/src/main/webapp/WEB-INF/templates/home.html
+++ b/src/main/webapp/WEB-INF/templates/home.html
@@ -13,35 +13,38 @@
 
 <body>
 
-<header>
-    <div>
+    <header>
+        <div>
 
-        <a th:href="@{/home}" class="logo">
-            <img src="https://tiw21marketplace.s3.eu-south-1.amazonaws.com/images/suppliers/amazon-logo.png" alt="amazon-logo.png"/>
-        </a>
+            <a th:href="@{/home}" class="logo">
+                <img src="https://tiw21marketplace.s3.eu-south-1.amazonaws.com/images/website/website-logo.png" alt="website-logo.png"/>
+            </a>
 
-        <div class="header-right">
-            <a th:href="@{/home}" class="active">Home</a>
-            <a th:href="@{/shoppingCart}">Shopping cart</a>
-            <a th:href="@{/orders}">My Orders</a>
-            <a th:href="@{/logout}">Logout</a>
+            <div class="header-right">
+                <a th:href="@{/home}" class="active">Home</a>
+                <a th:href="@{/shoppingCart}">Shopping cart</a>
+                <a th:href="@{/orders}">My Orders</a>
+                <a th:href="@{/logout}">Logout</a>
+            </div>
+
         </div>
+    </header>
 
+    <div th:class="welcome-title">
+        <br>
+        <br>
+        <h1>Welcome to our marketplace
+            <span th:text="${session.user.userName}">Amadeus</span>
+        </h1>
     </div>
-</header>
-
-<!-- <h1>Welcome to our marketplace <span th:text="${session.user.userName}">Amadeus</span></h1> -->
-
-<!-- Quick links-->
-
 
 
 <!-- Search form-->
-<div class="styled-form-button">
+<div class="styled-form">
     <form action="search/products" method="GET">
         <p>Cosa vuoi cercare di bello? </p>
         <input th:placeholder="'Oasis..'" name="keyword" >
-        <input class="go-search-button" type="submit" value="vai!">
+        <input class="button" type="submit" value="vai!">
     </form>
 </div>
 
@@ -49,7 +52,7 @@
 
 <div>
     <table class="styled-table">
-        <caption>Seen recently</caption>
+        <caption></caption>
         <thead>
         <tr>
             <th colspan="2" scope="col">Product</th>
@@ -66,14 +69,12 @@
                 <img th:src="'https://tiw21marketplace.s3.eu-south-1.amazonaws.com/images/products/'+ ${productInfo1.productImagePath}" alt="Product image"/>
             </td>
             <td>
-                <!-- form reso cliccabile e modificato con css -->
-                <form th:action=" ${#request.contextPath} + '/home' " method="POST" >
-                    <!-- il tag input vine utilizzato per mandare parametri nella richiesta -->
+                <form th:class="styled-form"
+                      th:action=" ${#request.contextPath} + '/home' "
+                      method="GET" > <!-- Da sostituire se si vuole aprire una pagina con le info sul prodotto -->
+
                     <input type="hidden" name="productId" th:value="${productId}" value="Id prodotto">
-                    <input type="submit" name="productName" th:value="${productInfo1.productName}" value="Nome prodotto" th:class="link-button">
-                    <!-- il tag button può essere utilizzato per inserire STATICAMENTE il testo del link -->
-                    <!-- <button type="submit" class="link-button"> Testo del link</button> -->
-                    <!-- inserire più 'type=submit' fa comparire più bottoni -->
+                    <input th:class="button" type="submit" name="productName" th:value="${productInfo1.productName}" value="Nome prodotto">
                 </form>
             </td>
             <td th:text="${productInfo1.productDescription}"></td>
@@ -83,89 +84,21 @@
             </td>
             <td th:text="${productInfo1.supplierName}"></td>
             <td>
-                <form th:action="${#request.contextPath} + '/products/AddToCart'"  th:object="${productInfo1}" method="POST">
+                <form th:class="styled-form"
+                      th:action="${#request.contextPath} + '/products/AddToCart'"
+                      th:object="${productInfo1}"
+                      method="POST">
+
                     <input type="hidden" th:value="${productInfo1.productId}"    name="productId" />
                     <input type="hidden" th:value="${productInfo1.supplierId}"   name="supplierId" />
                     <input type="hidden" th:value="${productInfo1.supplierProductCost}"   name="supplierProductCost" />
-                    <input type="submit"                                    value="One-click buy" />
+                    <input th:class="button" type="submit" value="One-click buy" />
                 </form>
             </td>
-
-            <!--    Questa entry della tabela contine tutte le informazioni sui venditori di tale prodotto
-                    che si è deciso di non mostrare per rendere più fluida l'esperienza utente almeno nella home
-            <td>
-                <table th:each="supplier : ${products.supplierProductMap.get(productId)}">
-                    <caption>Suppliers</caption>
-                    <thead>
-                    <tr>
-                        <th scope="col">Supplier</th>
-                        <th scope="col">Cost</th>
-                        <th scope="col">Rating</th>
-                        <th scope="col">Range</th>
-                        <th scope="col">Add to cart</th>
-                    </tr>
-                    </thead>
-                    <tr>
-                        <td th:text="${supplier.supplier.supplierName}"> Venditore 0</td>
-                        <td th:text="${supplier.supplierProductCost}">2000.00</td>
-                        <td th:text="${supplier.supplier.supplierRating}">0.0</td>
-                        <td>
-                            <table>
-                                <thead>
-                                <tr>
-                                    <th scope="col">Range</th>
-                                    <th scope="col">minItem</th>
-                                    <th scope="col">maxItem</th>
-                                    <th scope="col">cost</th>
-                                </tr>
-                                </thead>
-                                <tr th:each="range : ${supplier.supplier.supplierShippingPolicy.ranges}" >
-                                    <td th:text="${supplier.supplier.supplierShippingPolicy.ranges.indexOf(range) + 1}">1</td>
-                                    <td th:text="${range.minAmount}">1</td>
-                                    <td th:text="${range.maxAmount}">5</td>
-                                    <td th:text="${range.cost}">100,99</td>
-                                </tr>
-                            </table>
-                        </td>
-                        <td>
-                            <form th:action="${#request.contextPath} + '/products/AddToCart'" method="POST">
-                                <label for="int">How many:</label>
-                                <select name="howMany" id="int">
-                                    <option value="1">1</option>
-                                    <option value="2">2</option>
-                                    <option value="3">3</option>
-                                    <option value="4">4</option>
-                                    <option value="3">5</option>
-                                    <option value="3">6</option>
-                                    <option value="3">7</option>
-                                    <option value="3">8</option>
-                                    <option value="3">9</option>
-                                </select>
-                                <input type="hidden" th:value="${productInfo1.productId}"    name="productId" />
-                                <input type="hidden" th:value="${productInfo1.supplierId}"   name="supplierId" />
-                                <input type="hidden" th:value="${productInfo1.supplierProductCost}"   name="supplierProductCost" />
-                                <input type="submit" value="Add to cart">
-                            </form>
-                        </td>
-                    </tr>
-                </table>
-            </td>
-            -->
         </tr>
         </tbody>
     </table>
 </div>
-
-<h3>User info</h3>
-
-<p th:class="bold_info" th:with="address=${userInfo.getShippingAddresses().get(0)}">
-    This is your e-mail:<span th:text="${userInfo.email}">amadeus.wgang@gmail.com </span> <br>
-    Name: <span th:text="${userInfo.userName}">Amadeus</span> <br>
-    Surname: <span th:text="${userInfo.userSurname}">Mozart</span> <br>
-    Id: <span th:text="${userInfo.userId}">0</span> <br>
-    Your country is: <span th:text="${#locale.country}">AT</span> <br>
-    Your default Shipping Address: <span th:text="${address.recipient} + ' ' + ${address.address} +  ' ' + ${address.city} +  ' ' + ${address.state} +  ' ' + ${address.phone}">Via della nota d'oro, Vienna, Austria</span>
-</p>
 
 </body>
 </html>
