--- a/src/main/webapp/WEB-INF/templates/shoppingCart.html
+++ b/src/main/webapp/WEB-INF/templates/shoppingCart.html
@@ -15,14 +15,14 @@
   <header>
     <div>
 
-      <a th:href="@{/home}" class="logo">
-        <img src="https://tiw21marketplace.s3.eu-south-1.amazonaws.com/images/website/website-logo.png" alt="website-logo.png"/>
+      <a th:href="@{/GoToHome}" class="logo">
+        <img th:src="@{/images/website-logo.png}" alt="website-logo.png" src=""/>
       </a>
 
       <div class="header-right">
-        <a th:href="@{/home}">Home</a>
-        <a th:href="@{/shoppingCart}" th:class="active">Shopping cart</a>
-        <a th:href="@{/orders}">My Orders</a>
+        <a th:href="@{/GoToHome}" class="active">Home</a>
+        <a th:href="@{/GoToShoppingCart}">Shopping cart</a>
+        <a th:href="@{/GoToOrders}">My Orders</a>
         <a th:href="@{/logout}">Logout</a>
       </div>
 
@@ -104,7 +104,7 @@
           <td th:if="${ totalamount < supplierInfo.freeShippingMinAmount }" th:text="'Free shipping on ' + ${supplierInfo.supplierName} + ': ' + ${supplierInfo.freeShippingMinAmount}"> Spesa minima per spedizione gratuita </td>
           <td th:if="${ totalamount >= supplierInfo.freeShippingMinAmount }" th:text="'You\'re getting free shipping'"> Spesa minima per spedizione gratuita </td>
           <td>
-            <form  th:action="${#request.contextPath} + '/placeOrder'" method="POST">
+            <form  th:action="${#request.contextPath} + '/PlaceOrder'" method="POST">
               <label th:for="addreesId">Select an address
                 <select th:name="userShippingAddressId">
                   <option th:each="address : ${shoppingAddresses}" th:value="${address.shippingAddressId}"
