--- a/src/main/webapp/WEB-INF/templates/orders.html
+++ b/src/main/webapp/WEB-INF/templates/orders.html
@@ -20,9 +20,9 @@
       </a>
 
       <div class="header-right">
-        <a th:href="@{/GoToHome}" class="active">Home</a>
+        <a th:href="@{/GoToHome}">Home</a>
         <a th:href="@{/GoToShoppingCart}">Shopping cart</a>
-        <a th:href="@{/GoToOrders}">My Orders</a>
+        <a th:href="@{/GoToOrders} " class="active">My Orders</a>
         <a th:href="@{/logout}">Logout</a>
       </div>
 
