--- a/src/main/webapp/WEB-INF/templates/shoppingCart.html
+++ b/src/main/webapp/WEB-INF/templates/shoppingCart.html
@@ -20,8 +20,8 @@
       </a>
 
       <div class="header-right">
-        <a th:href="@{/GoToHome}" class="active">Home</a>
-        <a th:href="@{/GoToShoppingCart}">Shopping cart</a>
+        <a th:href="@{/GoToHome}">Home</a>
+        <a th:href="@{/GoToShoppingCart}" class="active">Shopping cart</a>
         <a th:href="@{/GoToOrders}">My Orders</a>
         <a th:href="@{/logout}">Logout</a>
       </div>
