--- a/src/main/webapp/WEB-INF/templates/error.html
+++ b/src/main/webapp/WEB-INF/templates/error.html
@@ -5,20 +5,34 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-	<link rel="stylesheet" type="text/css" media="all" href="../css/global.css" th:href="@{/css/global.css}" />
-	<link rel="stylesheet" type="text/css" media="all" href="../css/error.css" th:href="@{/css/error.css}" />
+	<link rel="stylesheet" type="text/css" media="all" href="/css/myStyle.css" th:href="@{/css/myStyle.css}" />
+	<link rel="stylesheet" type="text/css" media="all" href="/css/error.css" th:href="@{/css/error.css}" />
 	<title>Error page</title>
 </head>
 <body>
 
-	<div th:replace="/WEB-INF/header :: header"> </div>
+<header>
+	<div>
+		<a th:href="@{/GoToHome}" class="logo">
+			<img th:src="@{/images/website-logo.png}" alt="website-logo.png" src=""/>
+		</a>
+
+		<div class="header-right">
+			<a th:href="@{/GoToHome}" class="active">Home</a>
+			<a th:href="@{/GoToShoppingCart}">Shopping cart</a>
+			<a th:href="@{/GoToOrders}">My Orders</a>
+			<a th:href="@{/logout}">Logout</a>
+		</div>
+
+	</div>
+</header>
 
 	<div class="error-div">
-		<img class="error-image" src="/images/error.jpg" th:src="@{../../images/error.jpg}"/>
+		<img class="error-image" src="/images/error.jpg" th:src="@{/images/error.jpg}"/>
 	
 		<div class="error-title">An error occured</div>
 		<div class="error-reason">
-			Your error is: <b><span th:text="${error}">sample error</span></b>
+			Your error is: <b><span th:text="${errorMessage}">sample error</span></b>
 		</div>
 		<div th:if="${session.user == null}">
 			<hr>
